syntax = "proto3";
package jarviscrawlercore;

// ManhuaDBMode - manhuadb mode
enum ManhuaDBMode {
    // MHDB_MANHUA - manhua
    MHDB_MANHUA = 0;
}

// ManhuaDBBook - manhuadb book
message ManhuaDBBook {
    string title = 1;
    string url = 2;
    string name = 3;
    int32 rootType = 4;
    string rootName = 5;
}

// ManhuaDBManhua - manhuadb manhua
message ManhuaDBManhua {
    string comicid = 1;
    string name = 2;
    repeated ManhuaDBBook books = 3;
    repeated string authors = 4;
}

// ManhuaDBPage - manhuadb page
message ManhuaDBPage {
    string url = 1;
    int32 pageIndex = 2;
    bytes data = 3;
}

// ManhuaDBBookInfo - manhuadb book
message ManhuaDBBookInfo {
    string comicid = 1;
    string bookid = 2;
    repeated ManhuaDBPage pages = 3;
    int32 pageNums = 4;
}


// RequestManhuaDB - request manhuadb
message RequestManhuaDB {
    ManhuaDBMode mode = 1;
    string comicid = 2;
    string bookid = 3;
    int32 pageIndex = 4;
}

// ReplyManhuaDB - reply manhuadb
message ReplyManhuaDB {
    ManhuaDBMode mode = 1;

    oneof reply {
        ManhuaDBManhua manhua = 100;
        ManhuaDBBookInfo book = 101;
    }
}